syntax = "proto3";

package product;

message ProductNamesRequest {
    int64 bank_account_id = 1;
}

message ProductNamesResponse {
    repeated string names = 1;
}